--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <slf4j.version>1.7.30</slf4j.version>
     </properties>
 
+
     <build>
         <finalName>topjava</finalName>
         <defaultGoal>package</defaultGoal>
@@ -60,6 +61,14 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
